[package]
name = "spy-client"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.6.1", features = ["frunk", "macros", "auto-send"] }
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
image = "0.24.0"
libc = "*"
winsafe = "0.0.6"
chrono = "0.4.6"
os_info = "*"
hostname = "*"

[target.'cfg(windows)'.dependencies.winapi]
version = "*"
features = ["windef", "ntdef", "minwindef", "wingdi", "winuser", "winnt", "processthreadsapi", "psapi", "winnls"]
